tests/NormalTests/paczka2/big_fuzzy/75035922.err
Error in line 1: cGdvjG7uum S625 61,5
Error in line 2: xa7 A382 61,2
Error in line 9: vHa A558 24,0
Error in line 15: A382 A558 89,8
Error in line 18: xa7 A558 86,61
Error in line 12: xa7 S502 62,3
Error in line 25: 9gYDbie A558 97,1
Error in line 26: 9gYDbie S502 96,1
Error in line 28: A382 A382 15,0
Error in line 22: xa7 A558 101,6
Error in line 45: A382 A558 53,*
Error in line 35: A382 S502 71,4
Error in line 49: A382 A558 82,2
Error in line 42: cGdvjG7uum A558 11,3
Error in line 57: cGdvjG7uum A382 25,4
Error in line 53: 9gYDbie A382 47,3
Error in line 56: YeHP A558 126,0
Error in line 70: YeHP S625 49,4
Error in line 73: YeHP S502 -3,8
Error in line 81: 9gYDbie A382 0,0
Error in line 48: xa7 S625 18,2
Error in line 77: cGdvjG7uum S502 7,6
Error in line 85: vHa A558 7,0
Error in line 71: YeHP S502 73,3
Error in line 94: 9gYDbie A382 18,3
Error in line 102: 9gYDbie A558 97,1
Error in line 99: A382 S502 45,4
Error in line 111: A382 A558 59,3
Error in line 101: cGdvjG7uum A382 7,8
Error in line 133: xa7 S625 115,1
Error in line 150: kpG A558 50,0
Error in line 149: 9gYDbie A558 66,5
Error in line 164: YeHP A382 87,0
Error in line 162: 9gYDbie S502 83,7
Error in line 160: vHa S502 83,2
Error in line 171: vHa A558 81,9
Error in line 176: 9gYDbie S625 4,6
Error in line 178: 9gYDbie S502 26,6
Error in line 179: 9gYDbie A558 44,9
Error in line 172: vHa A553 243,2
Error in line 191: YeHP S502 43,3
Error in line 197: vHa A382 50,0
Error in line 195: 9gYDbie S502 10,2
Error in line 212: YeHP A55? 14,0
Error in line 218: A382 A558 96,9
Error in line 232: A382 A382 68,7
Error in line 242: 9gYDbie A558 32,56
